--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -3,3 +3,36 @@
 
 IDI_ICON ICON DISCARDABLE "icon.ico"
 CREATE_PROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "manifest.xml"
+
+// =============================
+// Version Information Resource
+// =============================
+1 VERSIONINFO
+ FILEVERSION     1,0,0,0
+ PRODUCTVERSION  1,0,0,0
+ FILEFLAGSMASK   0x3fL
+ FILEFLAGS       0x0L
+ FILEOS          0x40004L
+ FILETYPE        0x1L
+ FILESUBTYPE     0x0L
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "040904b0"  // 0x0409 = US English, 0x04b0 = Unicode
+        BEGIN
+            VALUE "CompanyName",      "picopicoscript.com\0"
+            VALUE "FileDescription",  "PicoPicoScript Virtual Machine Scripting Runtime\0"
+            VALUE "FileVersion",      "1.0.0.0\0"
+            VALUE "InternalName",     "picopico.exe\0"
+            VALUE "LegalCopyright",   "© 2025 PicoPicoP. All rights reserved.\0"
+            VALUE "OriginalFilename", "picopico.exe\0"
+            VALUE "ProductName",      "PicoPicoScript\0"
+            VALUE "ProductVersion",   "1.0.0.0\0"
+        END
+    END
+
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x0409, 1200
+    END
+END
