--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -351,10 +351,10 @@ endif()
 # Windows quirks
 if(PICO_TARGET_WINDOWS)
   if(MSVC)
-    target_compile_options(noctlang PRIVATE /utf-8)
+    target_compile_options(picopico PRIVATE /utf-8)
     target_link_options(picopico PRIVATE /SUBSYSTEM:WINDOWS)
   else()
-    target_compile_options(noctlang PRIVATE -municode -finput-charset=utf-8 -fexec-charset=utf-8)
+    target_compile_options(picopico PRIVATE -municode -finput-charset=utf-8 -fexec-charset=utf-8)
     target_link_options(picopico PRIVATE -mwindows -static)
   endif()
 endif()
