--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           -DBISON_EXECUTABLE="C:/ProgramData/chocolatey/bin/win_bison.exe"
 
       - name: Build (Release)
-        run: cmake --build --preset windows-msvc-x64-release
+        run: cmake --build --preset windows-msvc-x64-release --config Release --parallel
 
       - name: Upload Windows EXEs
         uses: actions/upload-artifact@v4
