--- a/resources/ios/Info.plist
+++ b/resources/ios/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
   <key>CFBundleIdentifier</key>
-  <string>io.noctvm.ios-picopico</string>
+  <string>io.noctvm.ios-playfield</string>
   <key>CFBundleName</key>
-  <string>PicoPico</string>
+  <string>Playfield</string>
   <key>CFBundleShortVersionString</key>
   <string>1.0.0</string>
   <key>CFBundleVersion</key>
