--- a/docs/mkdocs-ja/mkdocs.yml
+++ b/docs/mkdocs-ja/mkdocs.yml
@@ -1,15 +1,15 @@
-site_name: PicoPicoScript ドキュメント
-repo_url: https://github.com/awemorris/PicoPicoScript
+site_name: PlayfieldVM ドキュメント
+repo_url: https://github.com/awemorris/PlayfieldVM
 use_directory_urls: false
 
 nav:
   - Home: index.md
-  - Getting Started: gettingstarted.md
-  - PicoPicoScript Syntax: syntax.md
-  - PicoPicoScript API: api.md
-  - How To Build: build.md
-  - Porting: porting.md
-  - Design: design.md
+  - クイックガイド: gettingstarted.md
+  - スクリプト文法: syntax.md
+  - PlayfieldVM Engine API: api.md
+  - ビルド方法: build.md
+  - 移植状況: porting.md
+  - 設計: design.md
 
 theme:
   name: material
