--- a/docs/mkdocs-en/mkdocs.yml
+++ b/docs/mkdocs-en/mkdocs.yml
@@ -1,12 +1,12 @@
-site_name: Playfield VM Docs
-repo_url: https://github.com/awemorris/PlayfieldVM
+site_name: Playfield Engine Docs
+repo_url: https://github.com/awemorris/PlayfieldEngine
 use_directory_urls: false
 
 nav:
   - Home: index.md
   - Getting Started: gettingstarted.md
-  - PlayfieldVM Script Syntax: syntax.md
-  - PlayfieldVM Engine API: api.md
+  - Playfield Script Syntax: syntax.md
+  - Playfield Script API: api.md
   - How To Build: build.md
   - Porting: porting.md
   - Design: design.md
