--- a/docs/mkdocs-ja/mkdocs.yml
+++ b/docs/mkdocs-ja/mkdocs.yml
@@ -1,12 +1,12 @@
-site_name: Playfield VM ドキュメント
-repo_url: https://github.com/awemorris/PlayfieldVM
+site_name: Playfield Engine ドキュメント
+repo_url: https://github.com/awemorris/PlayfieldEngine
 use_directory_urls: false
 
 nav:
   - Home: index.md
   - クイックガイド: gettingstarted.md
-  - スクリプト文法: syntax.md
-  - PlayfieldVM Engine API: api.md
+  - Playfield Script の文法: syntax.md
+  - Playfield Script の API: api.md
   - ビルド方法: build.md
   - 移植状況: porting.md
   - 設計: design.md
