--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -21,12 +21,12 @@ BEGIN
         BLOCK "040904b0"  // 0x0409 = US English, 0x04b0 = Unicode
         BEGIN
             VALUE "CompanyName",      "noctvm.io\0"
-            VALUE "FileDescription",  "PlayfieldVM Scripting Runtime Virtual Machine\0"
+            VALUE "FileDescription",  "Playfield Engine Scripting Runtime Virtual Machine\0"
             VALUE "FileVersion",      "1.0.0.0\0"
             VALUE "InternalName",     "playfield.exe\0"
             VALUE "LegalCopyright",   "© 2025 Awe Morris. All rights reserved.\0"
             VALUE "OriginalFilename", "playfield.exe\0"
-            VALUE "ProductName",      "PlayfieldVM\0"
+            VALUE "ProductName",      "Playfield Engine\0"
             VALUE "ProductVersion",   "1.0.0.0\0"
         END
     END
